# flask-webui

./: .gitignore  .pylintrc  .travis.yml  AUTHORS.txt  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  app.py  code_test.sh  requirements.txt  setup.cfg  setup.py  start.py
alignak_webui/: __init__.py  backend.py  datatable.py  element.py  login.py  settings.cfg  start.py  user.py  views.py
alignak_webui/alignak_webui/: __init__.py  settings.cfg  views.py
alignak_webui/plugins/contacts/: contacts.py
alignak_webui/plugins/hosts/: hosts.py
alignak_webui/plugins/services/: services.py
alignak_webui/static/: charts-libs.js  page-app.css  page-app.js  page-libs.css  page-libs.js  page-login.css  page-login.js
alignak_webui/static/css/: application.css  bootstrap-theme.css  bootstrap-theme.min.css  bootstrap.css  bootstrap.min.css  simple-sidebar.css
alignak_webui/static/js/: application.js  bootstrap.js  bootstrap.min.js  (+1 more)
alignak_webui/templates/: _filters.html  _filters.tpl  _footer.html  _header.html  _livestate-graphs.html  _livestate-list.html  _modal_about.html  _modal_search_help.html  _objects-list.html  _objects-list.tpl  _problems-list.html  _sidebar.html  home-page.html  layout.html  login.html  macros.html  register.html
alignak_webui/utils/: __init__.py  assets.py  helper.py  plugins.py  settings.py
test/: .coveragerc  requirements.txt  setup_test.sh  test_app.py  test_contacts.py  test_datatable.py  test_frontend.py  test_helper.py  test_hosts.py  test_services.py  test_settings.cfg  test_settings.py  test_settings2.cfg  test_web.py
(+7 files in other folders)
