[metadata]
classifiers =
   Development Status :: 4 - Beta
   Environment :: Web Environment
   Framework :: Flask
   Intended Audience :: System Administrators
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Natural Language :: English
   Programming Language :: Python :: 2.7
   Topic :: System :: Monitoring
   Topic :: System :: Systems Administration

[files]
packages =
    alignak_webui

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[pbr]
skip_authors = True
skip_changelog = True

[behave]
paths = tests/features

[flake8]
# Ignore the following checks:
# W391: blank line at end of file
ignore=W391
show-source = true
exclude = .venv,.tox,dist,doc,*.egg,build
